# valitron

./: .gitignore  CONTRIBUTION.md  Cargo.toml  README.md  rfcs.md  rfcs2.md  rustfmt.toml
.github/workflow/: publish.yml
.github/workflows/: publish.yml
benches/: email.rs  full.rs
examples/: actix.rs  axum.rs  enum_msg.rs  enum_msg_full.rs  macro.rs  option.rs  rocket.rs  string.rs  string_custom.rs  url.rs
src/: float.rs  lib.rs  macros.rs  rule.rs  ser.rs
src/cmp/: mock_value.rs  mod.rs
src/de/: mock.rs  mod.rs  test.rs
src/register/: field_name.rs  lexer.rs  message.rs  mod.rs  string.rs  tests.rs
src/rule/: boxed.rs  mock.rs  mod.rs  string.rs  test.rs
src/rule/available/: compare.rs  confirm.rs  contains.rs  custom.rs  email.rs  end_with.rs  length.rs  mod.rs  not.rs  range.rs  regex.rs  required.rs  start_with.rs  trim.rs
src/rule/available/email/: parse.rs
src/rule/string/: boxed.rs  mod.rs
src/ser/: mock.rs  mod.rs  test.rs
src/value/: cmp.rs  float.rs  mock.rs  mod.rs
tests/: integration_test.rs
