[package]
name = "valitron"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Valitron is an ergonomics, functional and configurable validator"
keywords = ["validator", "serde", "ergonomics"]
repository = "https://github.com/tu6ge/valitron"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]

[[example]]
name = "axum"
required-features = ["full"]

[[example]]
name = "actix"
required-features = ["full"]

[[example]]
name = "rocket"
required-features = ["full"]

[dependencies]
serde = { version = "^1.0" }

[dev-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.107"

tokio = { version = "1.32.0", features = ["full"] }
axum = { version = "0.6.20", features = ["tokio", "form"]}
thiserror = "1.0.29"

actix-web = { version = "4.4.0" }

rocket = "=0.5.0-rc.3"