[package]
description = "Valitron is an ergonomics, functional and configurable validator"
edition = "2021"
keywords = ["validator", "serde", "ergonomics"]
license = "MIT OR Apache-2.0"
name = "valitron"
repository = "https://github.com/tu6ge/valitron"
version = "0.5.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["serde/derive", "idna", "regex"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]

[[example]]
name = "axum"
required-features = ["full"]

[[example]]
name = "actix"
required-features = ["full"]

[[example]]
name = "rocket"
required-features = ["full"]

[[example]]
name = "enum_msg"

[[example]]
name = "enum_msg_full"
required-features = ["full"]

[[example]]
name = "url"

[[bench]]
harness = false
name = "email"
required-features = ["full"]

[[bench]]
harness = false
name = "full"

[dependencies]
idna = {version = "1.0", optional = true}
regex = {version = "1", default-features = false, optional = true}
serde = {version = "^1.0"}

[dev-dependencies]
serde = {version = "^1.0", features = ["derive"]}
serde_json = "1.0.107"

criterion = "0.5"

axum = {version = "0.6.20", features = ["tokio", "form"]}
thiserror = "1.0.29"
tokio = {version = "1.32.0", features = ["full"]}

actix-web = {version = "4.4.0"}

rocket = "=0.5.0-rc.3"

url = "2.5.0"
validator = {version = "0.18", features = ["derive"]}

diesel = {version = "2.1.6", features = ["postgres"]}
